tests/NormalTests/paczka1/fuzzy1/85797291.err
Error in line 2: RNq0w A462 20,1
Error in line 1: Z6rgPhPW S172 16,7
Error in line 20: nFKUv7d0jf S754 17,9
Error in line 17: fzUKTF7 S754 27,1
